Day1 Layout, Heading, Paragraph

--- a/HTML5/1_Layout.html
+++ b/HTML5/1_Layout.html
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
 
 <html>
-<head>
-<title>This is my website</title>
-</head>
+    <head>
+        <title>This is my first website</title>
+        <meta charset="UTF-8" /> 
+        <meta name = "keywords" content="Java, Python, Javascript"/>
+        <meta name = "description" content ="my first website"/>
+        <meta name = "author" content=" Alican Akarin"/>
+    </head>
 
-<body>
+    <body>
+        <!--<header>-->
+        <h1>Heading H1</h1>
 
 
-</body>
+    </body>
+
 </html>
