--- a/newsletter-signup-form/index.html
+++ b/newsletter-signup-form/index.html
@@ -48,5 +48,26 @@
             </picture>
         </div>
     </div>
+
+    <!-- success modal dialog -->
+    <dialog id="success-dialog" class="success-modal">
+        <div class="modal-layout">
+            <div class="modal-content">
+                <img src="./assets/images/icon-success.svg" 
+                class="success-icon"
+                alt="success"
+                width="64"
+                height="64"
+                />
+                <h2 class="modal-title">Thanks for subscribing!</h2>
+                <p class="modal-description">A confirmation email has been sent to 
+                    <strong id="user-email">email.company.com</strong>. Please open it and click the button inside to confirm your subscription.
+                </p>
+            </div>
+            <button id="dismiss-button" class="modal-button">Dismiss Message</button>
+        </div>
+    </dialog>
+
+
 </body>
 </html>
